[package]
name = "sha2-wasm"
description = "Sha2 for wasm, published on WAPM"
version = "0.1.0"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/sha2"
homepage = "https://wasmer.io/"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.62.1"


[package.metadata.wapm]
namespace = "wasmer"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "sha2.wai" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
wai-bindgen-rust = "0.2.0"

[dev-dependencies]
hex-literal = "0.3.4"
anyhow = "1.0.68"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmer-pack-testing = "0.6.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "sha2-integration-tests"
harness = false
