[package]
name = "sha2"
description = "Sha2 for wasm, published on WAPM"
version = "0.1.0"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/sha2"
homepage = "https://wasmer.io/"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.62.1"
publish = false

[package.metadata.wapm]
namespace = "wasmer"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "sha2.wai" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
original = { package = "sha2", version = "0.10.6" }
wai-bindgen-rust = "0.2.0"

[dev-dependencies]
hex-literal = "0.3.4"
tempfile = "3.3.0"
tar = "0.4.38"
flate2 = "1.0.24"

[lib]
crate-type = ["cdylib", "rlib"]
